# convert_jupyter

./: .flake8  .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  TODO.txt  lint.sh  package-lock.json  pyproject.toml  setup.cfg  setup.py  update.sh  upload.sh
convert_jupyter/: __main__.py  clean.py  code.py  constans.py
menage_jupyter/: __init__.py  __main__.py  clean.py  clear.py  code.py  constans.py
scripts/reaserch/: convert.py  try copy.ipynb  try.ipynb  try.py  try2.ipynb  try3.ipynb  try3.py
tests/: test_clean.py  test_clear.py  test_code.py  test_jupyter.ipynb  test_jupyter_clean.ipynb  test_main.py
tests/code/: convert.py  test_jupyter.ipynb  tmp.py  try.ipynb  try3.ipynb  try3.py
