[tool.poetry]
name = "convert-jupyter"
version = "0.1.4"
description = ""
authors = ["Bartłomiej Chwiłkowski <bartekchwilkowski@gmail.com>"]
packages = [{include = "menage_jupyter"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chwilko/menage_jupyter"


[tool.poetry.dependencies]
python = "^3.8"
black = {extras = ["jupyter"], version = "^22.10.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
