[tool.poetry]
name = "convert-jupyter"
version = "0.1.5"
description = "Package help menage jupyter files. It let convert py to jupyter file and vice versa, and clean jupyter output. Useful to exclude git conflicts"

authors = ["Bartłomiej Chwiłkowski <bartekchwilkowski@gmail.com>"]
packages = [{include = "menage_jupyter"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
black = {extras = ["jupyter"], version = "^22.10.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert-jupyter"
version = "0.1.5"
authors = [    
  { name="Bartłomiej Chwiłkowski", email="bartekchwilkowski@gmail.com" },
  ]
description = "Package help menage jupyter files. It let convert py to jupyter file and vice versa, and clean jupyter output. Useful to exclude git conflicts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chwilko/menage_jupyter"

