[tool.poetry]
name = "convert-jupyter"
version = "1.0.1"
description = "Package help convert jupyter files. It let convert py to jupyter file and vice versa, and clean jupyter output. Useful to exclude git conflicts"

authors = ["Bartłomiej Chwiłkowski <bartekchwilkowski@gmail.com>"]
packages = [{include = "convert_jupyter"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
black = {extras = ["jupyter"], version = "^22.10.0"}
pylint = "^2.17.5"
isort = "^5.12.0"
mypy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert-jupyter"
version = "1.0.1"
authors = [    
  { name="Bartłomiej Chwiłkowski", email="bartekchwilkowski@gmail.com" },
  ]
description = "Package help convert jupyter files. It let convert py to jupyter file and vice versa, and clean jupyter output. Useful to exclude git conflicts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chwilko/convert_jupyter"



[tool.black]
target_version = ["py310"]
