[metadata]
name = menage_jupyter
version = 0.1.0
author = Bartłomiej Chwiłkowski
author_email = bartekchwilkowski@gmail.com
description = functions to menage jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ulamlabs/pytealext
project_urls =
    Bug Tracker = https://github.com/chwilko/menage_jupyter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
max_line_length = 88
exclude = .venv,__init__.py
ignore = W503,E501,E203

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
show_column_numbers = True
follow_imports = silent
strict_optional = True
mypy_path = contracts