[metadata]
name = menage_jupyter
version = 0.1.4
author = Bartłomiej Chwiłkowski
author_email = bartekchwilkowski@gmail.com
description = functions to menage jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ulamlabs/pytealext
project_urls =
    Bug Tracker = https://github.com/chwilko/menage_jupyter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir = 
    = ./
